--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <!-- App Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
   </head>
-  <body>
+  <body id="body">
     <header>
       <div class="menu container">
         <a href="#" class="text-uppercase link">Services</a>
@@ -57,6 +57,7 @@
         </div>
       </div>
     </section>
+
     <section id="work">
       <div class="container">
         <h2 class="text-uppercase text-services nt-0">Work</h2>
@@ -65,104 +66,66 @@
         <div class="box-work">
           <img src="assets/img/hero.png" alt="computadora" width="900">
         </div>
-        <div class="box-imagework">
-          <button type="button" name="button1">
-            <img src="assets/img/img-1.jpg" alt="img1" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+        <div class="box-imagework">          
+            <img src="assets/img/img-1.jpg" alt="img1" class="modalClick" width="200">        
+            <h5 class="mb-0">TAYMANN</h5>
         </div>
-
-        <div class="box-imagework">
-          <button type="button" class="btn btn-info btn-lg" name="button2" data-toggle="modal" data-target="img2">
-            <img src="assets/img/img-2.jpg" alt="img2" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
-          <div class="modal fade" id="img2" role="dialog">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <img src="assets/img/img-2.jpg" alt="img2" width="500">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="box-imagework">
-          <button type="button" name="button1">
-            <img src="assets/img/img-3.jpg" alt="img3" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+        <div class="box-imagework">          
+            <img src="assets/img/img-2.jpg" alt="img2" class="modalClick" width="200">         
+            <h5 class="mb-0">KERULU</h5>
         </div>
         <div class="box-imagework">
-          <button type="button" name="button1">
-            <img src="assets/img/img-4.jpg" alt="img4" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+            <img src="assets/img/img-3.jpg" alt="img3" class="modalClick" width="200">         
+            <h5 class="mb-0">THE BRASS COQ</h5>
         </div>
-        <div class="box-imagework">
-          <button type="button" name="button1">
-            <img src="assets/img/img-5.jpg" alt="img5" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+        <div class="box-imagework">          
+            <img src="assets/img/img-4.jpg" alt="img4" class="modalClick" width="200">          
+            <h5 class="mb-0">SUNGENRE</h5>
         </div>
-        <div class="box-imagework">
-          <button type="button" name="button6">
-            <img src="assets/img/img-6.jpg" alt="img6" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+        <div class="box-imagework">          
+            <img src="assets/img/img-5.jpg" alt="img5" class="modalClick" width="200">          
+            <h5 class="mb-0">MITRAGYNA SPECIOSA</h5>
         </div>
-        <div class="box-imagework">
-          <button type="button" name="button7">
-            <img src="assets/img/img-7.jpg" alt="img7" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+        <div class="box-imagework">          
+            <img src="assets/img/img-6.jpg" alt="img6" class="modalClick" width="200">          
+            <h5 class="mb-0">FOAM KING</h5>
         </div>
-        <div class="box-imagework">
-          <button type="button" name="button8">
-            <img src="assets/img/img-8.jpg" alt="img8" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+        <div class="box-imagework">          
+            <img src="assets/img/img-7.jpg" alt="img7" class="modalClick" width="200">          
+            <h5 class="mb-0">VOLITION</h5>
         </div>
-        <div class="box-imagework">
-          <button type="button" name="button9">
-            <img src="assets/img/img-9.jpg" alt="img9" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+        <div class="box-imagework">          
+            <img src="assets/img/img-8.jpg" alt="img8" class="modalClick" width="200">          
+            <h5 class="mb-0">WEAREINK</h5>
         </div>
-        <div class="box-imagework">
-          <button type="button" name="button10">
-            <img src="assets/img/img-10.jpg" alt="img10" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+        <div class="box-imagework">          
+            <img src="assets/img/img-9.jpg" alt="img9" class="modalClick" width="200">          
+            <h5 class="mb-0">GILCON</h5>
         </div>
-        <div class="box-imagework">
-          <button type="button" name="button11">
-            <img src="assets/img/img-11.jpg" alt="img11" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+        <div class="box-imagework">          
+            <img src="assets/img/img-10.jpg" alt="img10" class="modalClick" width="200">          
+            <h5 class="mb-0">OWLS APPLES</h5>
         </div>
-        <div class="box-imagework">
-          <button type="button" name="button12">
-            <img src="assets/img/img-12.jpg" alt="img12" width="200">
-          </button>
-          <h5 class="mb-0">NOMBRE DEL PROYECTO</h5>
+        <div class="box-imagework">          
+            <img src="assets/img/img-11.jpg" alt="img11" class="modalClick" width="200">          
+            <h5 class="mb-0">SHERWOOD</h5>
+        </div>
+        <div class="box-imagework">          
+            <img src="assets/img/img-12.jpg" alt="img12" class="modalClick" width="200">          
+            <h5 class="mb-0">PLATINIUM</h5>
         </div>
       </div>
-
     </section >
+
+    <div id= "modal" class="estilos">
+      <span id="cerrar">&times;</span>
+      <img id="imagenWork" src="" alt="imagen" >
+    </div>
 
 
     <footer>
       <p>&copy; Copyright</p>
     </footer>
-
-
-
 
     <script src="assets/js/main.js"></script>
 
