--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body id="body">
     <header>
       <div class="menu container">
-        <a href="#" class="text-uppercase link">Services</a>
-        <a href="#" class="text-uppercase link">Work</a>
+        <a href="#services" class="text-uppercase link">Services</a>
+        <a href="#work" class="text-uppercase link">Work</a>
         <a href="#" class="text-uppercase link">The team</a>
         <img src="assets/img/logo-r.png" alt="logo" class="logo" width="70">
 
